// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`matches snapshots > matches default variant 1`] = `
<DocumentFragment>
  <div
    class="sc-feUYzb hzHmVu aje-select sc-bXCLgj bQHwvG aje-select aje-select--default"
  >
    <div
      aria-hidden="true"
      data-a11y-ignore="aria-hidden-focus"
      data-react-aria-prevent-focus="true"
      data-testid="hidden-select-container"
      style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
    >
      <input
        style="font-size: 16px;"
        tabindex="-1"
        type="text"
      />
      <label>
        <select
          tabindex="-1"
        >
          <option />
          <option
            value="react-aria-1"
          >
            Item 1
          </option>
          <option
            value="react-aria-2"
          >
            Item 2
          </option>
        </select>
      </label>
    </div>
    <label
      class="sc-eqUzNf citWII is-auto"
      id="react-aria-:r3:"
    >
      Custom dropdown label
    </label>
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="react-aria-:r7: react-aria-:r3:"
      class="sc-dLNtp sc-hzhKNl hkAcSC hhPoUm aje-btn sc-fHjqbK hMkkGO aje-btn--dropdown is-medium"
      id="react-aria-:r2:"
      type="button"
    >
      <span
        class="sc-fUnNpA iyHtdr"
        id="react-aria-:r7:"
      >
        Select an option
      </span>
      <i
        aria-hidden="true"
        class="sc-cPiJYC wZRQV aje-icon material-icons is-medium"
      >
        arrow_drop_down
      </i>
    </button>
  </div>
</DocumentFragment>
`;

exports[`matches snapshots > matches floating variant 1`] = `
<DocumentFragment>
  <div
    class="sc-feUYzb hzHmVu aje-select sc-bXCLgj bQHwvG aje-select aje-select--floating aje-select--floating"
  >
    <div
      aria-hidden="true"
      data-a11y-ignore="aria-hidden-focus"
      data-react-aria-prevent-focus="true"
      data-testid="hidden-select-container"
      style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
    >
      <input
        style="font-size: 16px;"
        tabindex="-1"
        type="text"
      />
      <label>
        <select
          tabindex="-1"
        >
          <option />
          <option
            value="react-aria-1"
          >
            Item 1
          </option>
          <option
            value="react-aria-2"
          >
            Item 2
          </option>
        </select>
      </label>
    </div>
    <div
      class="sc-hmdnzv cpuyuG"
    >
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-labelledby="react-aria-:rf: react-aria-:rb:"
        class="sc-dLNtp sc-hzhKNl hkAcSC hhPoUm aje-btn sc-fHjqbK hMkkGO aje-btn--dropdown is-medium"
        id="react-aria-:ra:"
        type="button"
      >
        <span
          class="sc-fUnNpA iyHtdr"
          id="react-aria-:rf:"
        />
        <i
          aria-hidden="true"
          class="sc-cPiJYC wZRQV aje-icon material-icons is-medium"
        >
          arrow_drop_down
        </i>
      </button>
      <label
        class="sc-eqUzNf citWII is-auto"
        id="react-aria-:rb:"
      >
        Custom dropdown label
      </label>
    </div>
  </div>
</DocumentFragment>
`;
